# tikz2svg

./: .gitignore  BUGFIX_BEZIER_CURVES.md  CLAUDE.md  CODE_DUPLICATION_REPORT.md  CONVERTER_REFACTORING_PLAN.md  DELIVERABLES.md  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  README_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  SPACETIME_COMPARISON.md  SRI_YANTRA_ANALYSIS.md  SUMMARY.md  TEST_RESULTS.md  UNIT_TESTING_SUMMARY.md  batch_convert.py  convert.py  coverage.json  pyproject.toml  scrape_tikz.py  spacetime_comparison.html  test_complex.py  test_example.py  test_inline_coord.tex  test_math.tex  test_math_simple.tex  test_spacetime.tex  test_sri_yantra.py  tikz2svg.py
.github/workflows/: ci.yml  quality.yml
inputs/: complex_demo.tex  input01.tex  phase1_demo.tex
parser/: parser.py
svg/: __init__.py  converter.py  styles.py
tests/: __init__.py  test_coordinate_resolver.py  test_inline_coordinates.py  test_loop_expander.py  test_math_rendering.py  test_option_processor.py  test_parser.py  test_path_renderer.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_spacetime_example.py  test_string_evaluator.py  test_styles.py  test_svg_converter.py  test_text_rendering.py
tikz2svg/: __init__.py  cli.py
tikz2svg/evaluator/: __init__.py  context.py  macro_expander.py  math_eval.py
tikz2svg/parser/: __init__.py  ast_nodes.py  grammar.lark  parser.py  preprocessor.py
tikz2svg/svg/: __init__.py  converter.py  coordinate_resolver.py  geometry.py  loop_expander.py  math_renderer.py  option_processor.py  path_renderer.py  string_evaluator.py  styles.py
